# glmmTMB

./: .RDataTmp  .gitignore  .travis.yml  .travis.yml.prev  DESCRIPTION  Makefile  README.md  index.html  index.md  inputOutput.md  models.rda
glmmTMB/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  _pkgdown.yaml  cleanup  configure  configure.ac  models.rda
glmmTMB/R/: Anova.R  Rdpack.R  VarCorr.R  data.R  denom_df.R  diagnose.R  distributions.R  effects.R  emmeans.R  enum.R  family.R  glmmTMB.R  hatvalues.R  kenward_roger.R  lme4_utils_temp.R  lsmeans_methods.R  methods.R  mvlgcp.R  predict.R  priors.R  profile.R  reformulas.R  rr_fns.R  rtmb_tpl.R  tmbroot.R  utils.R  utils_covstruct.R  zzz.R
glmmTMB/data/: Owls.rda  Salamanders.rda  epil2.rda  gorillas.rda  lansing.rda  spider_long.rda
glmmTMB/inst/: CITATION  NEWS.Rd  REFERENCES.bib
glmmTMB/man/: Owls.Rd  RHSForm.Rd  Salamanders.Rd  VarCorr.glmmTMB.Rd  as.theta.vcov.Rd  bf_matrix.Rd  biplot.glmmTMB.Rd  bootmer_methods.Rd  bread.glmmTMB.Rd  checkDepPackageVersion.Rd  compois.Rd  confint.glmmTMB.Rd  dbell.Rd  dgenpois.Rd  diagnose.Rd  dof_KR.Rd  dot-adjustX.Rd  dot-checkRankX.Rd  dot-collectDuplicates.Rd  downstream_methods.Rd  drop.special2.Rd  dropHead.Rd  dtruncated_nbinom2.Rd  epil2.Rd  estfun.glmmTMB.Rd  expandAllGrpVar.Rd  expandGrpVar.Rd  extractForm.Rd  family_params.Rd  fbx.Rd  findReTrmClasses.Rd  fitTMB.Rd  fixef.Rd  formFuns.Rd  formatVC.Rd  format_sdvar.Rd  formfuns.Rd  formula.glmmTMB.Rd  genpois.Rd  getCapabilities.Rd  (+57 more)
glmmTMB/src/: Makevars  Makevars.in  Makevars.win  cordistrib.h  distrib.cpp  distrib.h  distrib.hpp  glmmTMB.cpp  init.h  utils.cpp
glmmTMB/src-i386/: init.h
glmmTMB/tests/: AAAtest-all.R  up2date_test.R
glmmTMB/vignette/: InstEvalTimings.rda  glmmTMB.Rnw  glmmTMB.bib  timingContraception.R  timingFuns.R  timingInstEval.R  timing_funs.R
glmmTMB/vignettes/: adding_families.rmd  adjustbox.sty  chicago.bst  contraceptionTimings.rda  covstruct.html  covstruct.rda  covstruct.rmd  denovo_simulation.Rmd  glmmTMB.Rnw  glmmTMB.bib  hacking.rmd  mcmc.html  mcmc.rmd  miscEx.rmd  model_evaluation.Rnw  model_evaluation.rmd  multirow.sty  parallel.Rmd  parallel.rmd  priors.rmd  sas_log.txt  satterthwaite_unstructed_example2.Rmd  satterthwaite_unstructured_example2.Rmd  satterthwaite_with_glmmTMB.Rmd  sim.html  sim.rmd  siunitx.sty  tc-pgf.def  timingFuns.R  (+4 more)
(+277 files in other folders)
